crates/omega_markdown_stream/src/snapshots/omega_markdown_stream__table__tests__special_characters.snap
---
source: crates/omega_markdown_stream/src/table.rs
expression: "render(vec![vec![\"Symbol\", \"Meaning\"], vec![\"<\", \"less than\"],\nvec![\">\", \"greater than\"], vec![\"&\", \"ampersand\"], vec![\"\\\"\", \"quote\"],])"
---
  ┌────────┬──────────────┐
  │ Symbol │ Meaning      │
  ├────────┼──────────────┤
  │ <      │ less than    │
  ├────────┼──────────────┤
  │ >      │ greater than │
  ├────────┼──────────────┤
  │ &      │ ampersand    │
  ├────────┼──────────────┤
  │ "      │ quote        │
  └────────┴──────────────┘
