crates/omega_markdown_stream/src/snapshots/omega_markdown_stream__table__tests__whitespace_content.snap
---
source: crates/omega_markdown_stream/src/table.rs
expression: "render(vec![vec![\"Header\", \"Value\"], vec![\"  spaces  \", \"   \"],])"
---
  ┌────────────┬───────┐
  │ Header     │ Value │
  ├────────────┼───────┤
  │   spaces   │       │
  └────────────┴───────┘
